Update to F41 image, disabling sshd-vsock to avoid issues with vsock_diag_test

--- a/playbooks/vsock-test-suite.yml
+++ b/playbooks/vsock-test-suite.yml
@@ -25,6 +25,10 @@
         wait_for_connection:
       - name: Gather facts for first time
         setup:
+      - name: Stop sshd-vsock to avoid issue with vsock_diag_test
+        service:
+          name: sshd-vsock.socket
+          state: stopped
       - modprobe:
           name: vsock_loopback
           state: present
@@ -149,6 +153,10 @@
         wait_for_connection:
       - name: Gather facts for first time
         setup:
+      - name: Stop sshd-vsock to avoid issue with vsock_diag_test
+        service:
+          name: sshd-vsock.socket
+          state: stopped
       - name: Stop firewalld service
         service:
           name: firewalld
