--- a/playbooks/vsock-test-suite.yml
+++ b/playbooks/vsock-test-suite.yml
@@ -190,7 +190,7 @@
           vsock_test_client:
       - role: vsock_uring_test_kernel
         vars:
-          vsock_uring_test_server: { port: "54321", cid: "{{ l1_vms[0].cid }}" }
+          vsock_uring_test_server: { port: "54321", cid: "{{ l1_vms[0].cid }}", param: "--peer-port 4321" }
           vsock_uring_test_client:
       - role: vsock_test_iperf
         vars:
@@ -225,7 +225,7 @@
       - role: vsock_uring_test_kernel
         vars:
           vsock_uring_test_server:
-          vsock_uring_test_client: { host: "{{ l0_vms[0].ip }}", port: "54321", cid: "2" }
+          vsock_uring_test_client: { host: "{{ l0_vms[0].ip }}", port: "54321", cid: "2", param: "--peer-port 4321" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
@@ -261,7 +261,7 @@
           vsock_test_client:
       - role: vsock_uring_test_kernel
         vars:
-          vsock_uring_test_server: { port: "54321", cid: "{{ 2 }}" }
+          vsock_uring_test_server: { port: "54321", cid: "{{ 2 }}", param: "--peer-port 4321" }
           vsock_test_client:
       - role: vsock_test_iperf
         vars:
@@ -296,7 +296,7 @@
       - role: vsock_uring_test_kernel
         vars:
           vsock_uring_test_server:
-          vsock_uring_test_client: { host: "{{ l1_vms[0].ip }}", port: "54321", cid: "{{ l1_vms[0].cid }}" }
+          vsock_uring_test_client: { host: "{{ l1_vms[0].ip }}", port: "54321", cid: "{{ l1_vms[0].cid }}", param: "--peer-port 4321" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
